crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_batch_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cfg
---
BatchConfig {
    max_batch_size: 8,
    timeout: 30s,
    max_total_tokens: 8192,
}
