crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_cache_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: cfg
---
CacheConfig {
    max_size_bytes: 1073741824,
    max_sequence_length: 2048,
    enable_compression: false,
    eviction_policy: LRU,
    block_size: 64,
}
