crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_gen_sampling_strategy_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: strategy
---
SamplingStrategy {
    config: SamplingConfig {
        temperature: 1.0,
        top_k: Some(
            50,
        ),
        top_p: Some(
            0.9,
        ),
        repetition_penalty: 1.1,
        do_sample: true,
    },
    repetition_history: [],
    current_repetition_penalty: 1.1,
}
