crates/bitnet-inference/tests/snapshots/snapshot_wave18__w18_gen_sampling_strategy_greedy_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave18.rs
expression: strategy
---
SamplingStrategy {
    config: SamplingConfig {
        temperature: 0.0,
        top_k: None,
        top_p: None,
        repetition_penalty: 1.0,
        do_sample: false,
    },
    repetition_history: [],
    current_repetition_penalty: 1.0,
}
